Fix colors of timlin ein dark mode

--- a/src/layout/Timeline/styles.scss
+++ b/src/layout/Timeline/styles.scss
@@ -11,3 +11,26 @@
         color: themed('linkColor');
     }
 }
+
+.vertical-timeline-element-icon {
+    @include themify($themes) {
+        box-shadow: 0 0 0 4px themed('primaryColor'), inset 0 2px 0 rgba(0,0,0,.08), 0 3px 0 4px rgba(0,0,0,.05);
+    }
+}
+
+.vertical-timeline-element-content {
+    @include themify($themes) {
+        background-color: themed('primaryColor');
+        box-shadow: 0 3px 0 themed('boxShadowColor');
+    }
+}
+
+.vertical-timeline-element-content-arrow {
+    @include themify($themes) {
+        border-right: 7px solid themed('primaryColor');
+    }
+}
+
+.vertical-timeline::before {
+    border-radius: 2px;
+}
